--- a/consul/templates/settings.hcl.j2
+++ b/consul/templates/settings.hcl.j2
@@ -67,7 +67,7 @@ ports {
   dns   = 8600
   http  = 8500
   https = -1 # 8501 to enable
-  grpc  = -1 # 8502 to enable
+  grpc  = 8502 # -1 to disable; required by connect
 
   serf_lan = 8301
   serf_wan = 8302
