--- a/consul/templates/consul.sh.j2
+++ b/consul/templates/consul.sh.j2
@@ -3,6 +3,12 @@
 ################################################################################
 
 ANSIBLE_CONSUL_VERSION={{ version }}
+{% if acl_enabled and server_enabled %}
+CONSUL_HTTP_TOKEN={{ acl_master_token }}
+{% elseif acl_enabled and not server_enabled %}
+CONSUL_HTTP_TOKEN={{ acl_agent_token }}
+{% endif %}
+
 if [ -d "{{ path_binaries }}" ] ; then
   PATH="$PATH:{{ path_binaries }}"
 fi
